[package]
name = "rust_auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0"
actix-rt = "2.0.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.70"
jsonwebtoken = "8.2.0"
bcrypt = "0.8.1"
mysql = "20.0.3"
dotenv = "0.15.0"
actix-jwt-auth-middleware = "0.3.0"
futures = "0.3.24"
futures-util = "0.3.24"
chrono = "0.4.22"
mime = "0.3.17"